--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<blockquote cite="http://www.worldwildlife.org/who/index.html">
-		<p class="questions">Who was the first female to become the governor of an Indian state?</p>
+	<blockquote  class="questions" cite="http://www.worldwildlife.org/who/index.html">
+		<p>Who was the first female to become the governor of an Indian state?</p>
 	</blockquote>
-	<blockquote cite="http://www.worldwildlife.org/who/index.html">
-		<p class="questions">Who among first Woman to climb Mount Everest twice?</p>
+	<blockquote  class="questions" cite="http://www.worldwildlife.org/who/index.html">
+		<p>Who among first Woman to climb Mount Everest twice?</p>
 	</blockquote>
-	<blockquote cite="http://www.worldwildlife.org/who/index.html">
-		<p class="questions">Who is President of India?</p>
+	<blockquote  class="questions" cite="http://www.worldwildlife.org/who/index.html">
+		<p>Who is President of India?</p>
 	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
